--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.8.4",
+    "browser-image-compression": "^2.0.2",
     "chroma-js": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
